--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lucide-react": "^0.325.0",
     "mongoose": "^8.1.2",
     "next": "14.1.0",
+    "next-intl": "^3.7.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
