--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-player": "^2.14.1",
+    "react-responsive-modal": "^6.4.2",
     "react-search-autocomplete": "^8.5.2",
     "swiper": "^11.0.6",
     "tailwind-merge": "^2.2.1",
