--- a/package.json
+++ b/package.json
@@ -15,18 +15,23 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@sanity/image-url": "1",
+    "@sanity/vision": "3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.325.0",
     "mongoose": "^8.1.2",
     "next": "14.1.0",
     "next-intl": "^3.7.0",
+    "next-sanity": "7",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-player": "^2.14.1",
     "react-responsive-modal": "^6.4.2",
     "react-search-autocomplete": "^8.5.2",
+    "sanity": "3",
+    "styled-components": "6",
     "swiper": "^11.0.6",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
