--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-responsive-modal": "^6.4.2",
     "react-search-autocomplete": "^8.5.2",
     "sanity": "3",
+    "sharp": "^0.33.2",
     "styled-components": "6",
     "swiper": "^11.0.6",
     "tailwind-merge": "^2.2.1",
