--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "next": "14.1.0",
     "next-intl": "^3.7.0",
     "next-sanity": "7",
+    "nextjs-toploader": "^1.6.6",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-player": "^2.14.1",
+    "react-responsive": "^9.0.2",
     "react-responsive-modal": "^6.4.2",
     "react-search-autocomplete": "^8.5.2",
     "sanity": "3",
