add: add to cart

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -21,14 +22,17 @@
     "@sanity/locale-de-de": "^1.1.0",
     "@sanity/locale-th-th": "^1.1.0",
     "@sanity/vision": "3",
+    "add": "^2.0.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "dlx": "^0.2.1",
     "lucide-react": "^0.325.0",
     "mongoose": "^8.1.2",
     "next": "14.1.0",
     "next-intl": "^3.7.0",
     "next-sanity": "7",
     "nextjs-toploader": "^1.6.6",
+    "pnpm": "^8.15.3",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
@@ -37,12 +41,15 @@
     "react-responsive-modal": "^6.4.2",
     "react-search-autocomplete": "^8.5.2",
     "sanity": "3",
+    "shadcn-ui": "^0.8.0",
     "sharp": "^0.33.2",
+    "sheet": "^0.2.0",
     "styled-components": "6",
     "swiper": "^11.0.6",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^4.5.1"
   },
   "devDependencies": {
     "@types/node": "^20",
