--- a/package.json
+++ b/package.json
@@ -48,8 +48,7 @@
     "swiper": "^11.0.6",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4",
-    "zustand": "^4.5.1"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
