--- a/package.json
+++ b/package.json
@@ -17,15 +17,19 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "@sanity/block-content-to-react": "^3.0.0",
     "@sanity/image-url": "1",
     "@sanity/locale-de-de": "^1.1.0",
     "@sanity/locale-th-th": "^1.1.0",
     "@sanity/vision": "3",
     "add": "^2.0.6",
+    "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "dlx": "^0.2.1",
+    "express": "^4.18.2",
+    "http-proxy-middleware": "^2.0.6",
     "lucide-react": "^0.325.0",
     "mongoose": "^8.1.2",
     "next": "14.1.0",
@@ -35,6 +39,7 @@
     "pnpm": "^8.15.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-player": "^2.14.1",
     "react-responsive": "^9.0.2",
