--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "react-pdf": "^7.7.1",
     "react-player": "^2.14.1",
     "react-responsive": "^9.0.2",
     "react-responsive-modal": "^6.4.2",
@@ -62,6 +63,7 @@
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
+    "file-loader": "^6.2.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
